# Kairota

./: .env.example  .gitignore  AGENTS.md  MILESTONES.md  README.md  alembic.ini  pyproject.toml
.agents/checks/: check_ai_governance.py  live_github_dogfood.py
docs/: README.md
docs/architecture/: control-plane.md  m1-ai-dev-queue.md
docs/contracts/: agent-runs.md  cost-events.md  experience-registry.md  scheduler.md  work-items.md
docs/design/: product-ui.md
docs/governance/: privacy.md
docs/interfaces/: control-api.md
docs/validation/: baseline.md  m1-exit-checklist.md  managed-project-dogfood.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_runtime_foundation.py  0003_command_requests.py  0004_worker_run_lifecycle.py  0005_managed_project_onboarding.py  0006_simplified_issue_scheduler.py  2b24c7780727_core_schema_contracts.py
skills/kairota-managed-project/: SKILL.md
src/kairota/: __init__.py  cli.py  config.py  db.py
tests/: conftest.py  test_api.py  test_claims.py  test_cli.py  test_complex_scheduling.py  test_contract_schemas.py  test_github_adapter.py  test_github_client.py  test_github_normalizers.py  test_github_sync.py  test_github_webhook.py  test_issue_scheduler.py  test_m1_exit.py  test_managed_project_complex_scheduling.py  test_managed_project_dogfood.py  test_migrations.py  test_project_sync.py  test_queue_workbench.py  test_scheduler_planner.py  test_schema_constraints.py  test_state_machine.py  test_worker_runs.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.test.tsx  App.tsx  (+4 more)
(+45 files in other folders)
