[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairota"
version = "0.1.0"
description = "Personal AI work control plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.11",
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
kairota = "kairota.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kairota"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
